--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -1,42 +1,14 @@
-<!DOCTYPE html>
-<html>
-<body>
+<!-- app/templates/auth/register.html -->
 
-<h2>Sign up Form</h2>
-
-<form action="/" method="post">
-  <div class ="signUpContainer">
-  <label for="email"><b>Email:<br></b></label>
-  <input type="email" placeholder="Enter Email" name="email"  onkeyup='validateEmail(email);' required/><br>
- 
-   <label>password : <br>
-  <input name="password" placeholder="Enter Password" id="password" type="password" onkeyup='check();' required />
-</label>`
-<br>
-<label>confirm password: <br>
-  <input type="password" placeholder="Re-enter Password" name="confirm_password" id="confirm_password"  onkeyup='check();' required/> 
-  <span id='message'></span>
-</label>`<br>
-      <input type="submit" value = "Submit" ></input>
-    <script> 
-      var check = function() {
-  if (document.getElementById('password').value ==
-    document.getElementById('confirm_password').value) {
-    document.getElementById('message').style.color = 'green';
-    document.getElementById('message').innerHTML = 'matching';
-  } else {
-    document.getElementById('message').style.color = 'red';
-    document.getElementById('message').innerHTML = 'not matching';
-  }
-}
-function validateEmail() {
-    var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
-    return re.test(String(email).toLowerCase());
-}
-</script>
-      
-    </div>
-</form>
-
-</body>
-</html>
+{% import "bootstrap/wtf.html" as wtf %}
+{% extends "index.html" %}
+{% block title %}Register{% endblock %}
+{% block body %}
+<div class="content-section">
+  <div class="center">
+    <h1>Register for an account</h1>
+    <br/>
+    {{ wtf.quick_form(form) }}
+  </div>
+</div>
+{% endblock %}
