--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,17 @@
-Hello
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>Sign up Form</h2>
+
+<form action="/" method="post">
+  <div class ="signUpContainer">
+      <label for="username"><b>Username:<br></b></label>
+      <label for="user_val">*REMOTE_USER val from apache server*</label><br>
+      <label for="name"><b>Full Name:<br></b></label>
+      <input type="text" placeholder="Enter Full Name" name="name" />
+      <input type="submit" />
+  </div>
+</form>
+</body>
+</html>
