Update Readme and minor html tweaks

--- a/app/templates/errors/403.html
+++ b/app/templates/errors/403.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <title>403</title>
     <h1>403 Error</h1>
+
 </head>
 <body>
+<p>Forbidden</p>
+
+
 
 </body>
 </html>
