--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -1,14 +1,17 @@
-<!-- app/templates/auth/register.html -->
+<!DOCTYPE html>
+<html>
+<body>
 
-{% import "bootstrap/wtf.html" as wtf %}
-{% extends "index.html" %}
-{% block title %}Register{% endblock %}
-{% block body %}
-<div class="content-section">
-  <div class="center">
-    <h1>Register for an account</h1>
-    <br/>
-    {{ wtf.quick_form(form) }}
+<h2>Sign up Form</h2>
+
+<form action="/" method="post">
+  <div class ="signUpContainer">
+      <label for="username"><b>Username:<br></b></label>
+      <label for="user_val"></label><br>
+      <label for="name"><b>Full Name:<br></b></label>
+      <input type="text" placeholder="Enter Full Name" name="name" />
+      <input type="submit" value="submit" onclick="return empty()"/>
   </div>
-</div>
-{% endblock %}
+</form>
+</body>
+</html>
