Populate user and catch None error if form is submitted blank

--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -2,12 +2,11 @@
 <html>
 <body>
 
-<h2>Sign up Form</h2>
+<h1>Sign up Form</h1>
+<h2>Hello, {{ user }}!</h2>
 
 <form action="/" method="post">
   <div class ="signUpContainer">
-      <label for="username"><b>Username:<br></b></label>
-      <label for="user_val"></label><br>
       <label for="name"><b>Full Name:<br></b></label>
       <input type="text" placeholder="Enter Full Name" name="name" />
       <input type="submit" value="submit" onclick="return empty()"/>
