clean_registration_page Cleaned up html page to match out theme.

--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -1,16 +1,110 @@
-<!DOCTYPE html>
-<html>
-<body>
+<html class="gr__127_0_0_1"><head>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-<h1>Sign up Form</h1>
-<h2>Hello, {{ user }}!</h2>
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<form action="/" method="post">
-  <div class ="signUpContainer">
-      <label for="name"><b>Full Name:<br></b></label>
-      <input type="text" placeholder="Enter Full Name" name="name" />
-      <input type="submit" value="submit" onclick="return empty()"/>
-  </div>
-</form>
-</body>
-</html>
+  <!-- Popper JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <title>HPC Desktop</title>
+  <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">
+  <link rel="stylesheet" media="all" href="/static/ss/application-eece48381ddeebab1ee710d686347e55075e2c94f2099e24f114.css">
+  <script src="/static/ss/application-268f5240ef619eb5a13eabc03b65388c21be92fab41c58c55dc2.js"></script>
+  <meta name="csrf-param" content="authenticity_token">
+<meta name="csrf-token" content="0+ThIoS92NXMuBrNdWwZ01S5oQovHxQPpgKyhP38madChKujraPZUJru2Y7jm1b5kfrNbbxc47/5YOSRfcauoQ==">
+
+
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.navbar-inverse {
+  background-color: rgb(0,99,65);
+}
+
+</style>
+
+</head>
+<body data-gr-c-s-loaded="true"><nav class="navbar navbar-inverse navbar-static-top">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+
+      </div><div class="container-fluid">
+
+      <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-9" style="">
+        <a class="navbar-brand" href="/pun/sys/dashboard/">UAB OnDemand <sup>beta</sup></a><ul class="nav navbar-nav">
+  <ul class="dropdown-menu">
+
+        </ul>
+        <div class="navbar-right">
+          <ul class="nav navbar-nav" style="float: right;">
+
+            <li class="dropdown" title="Help">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+    <span class="hidden-sm hidden-sm-nav"> Help</span>
+  </a>
+  <ul class="dropdown-menu">
+
+
+<li>
+  <a target="_blank" href="https://docs.uabgrid.uab.edu/wiki/Cheaha_GettingStarted">
+    <i class="fas fa-info-circle fa-fw"></i> Online Documentation
+</a></li>
+
+
+
+
+<li>
+  <a target="_self" href="/nginx/stop?redir=/pun/sys/dashboard/">
+    <i class="fas fa-sync fa-fw"></i> Restart Web Server
+</a></li>
+
+  </ul>
+</li>
+
+          </ul>
+          <ul class="nav navbar-nav">
+            <li>
+          </li></ul>
+        </div>
+      </ul></div>
+    </div>
+  </nav>
+
+<div class="container content" role="main" style="
+    width: 800;
+">
+
+    <div class="col-md-10">
+        <img class="header-logo" height="100" style="margin-bottom: 20px" <img="" src="/static/img/cheaha-logo-a605de0aecd3006b82a5ee30a6d0cb8cd9bf8b7e836296cc293eac746a4c2b11.png">
+    <h1>Welcome</h1>
+    <h2>Hello user</h2>
+
+    <form action="/" method="post">
+      <div class="signUpContainer">
+          <label for="name"><b>Full Name:<br></b></label>
+          <input class="form-control" type="text" placeholder="Enter Full Name" name="name">
+
+
+          <input class="btn btn-primary btn-block" type="submit" value="submit" onclick="return empty()">
+      </div>
+    </form>
+    </div>
+    </div>
+<div><div class="gr_-editor gr-iframe-first-load" style="display: none;"><div class="gr_-editor_back"></div><iframe class="gr_-ifr gr-_dialog-content"></iframe></div></div><grammarly-card><div></div></grammarly-card><span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span>
+<footer>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-2 col-sm-2">
+        <a href="https://osc.github.io/Open-OnDemand/">
+          <img class="footer-logo" alt="Powered by Open OnDemand" height="40" style="margin-bottom: 20px" <img="" src="/static/img/OpenOnDemand_powered_by_RGB-cb3aad5ff5350c7994f250fb334ddcc72e343233ce99eb71fda93beddd76a847.svg">
+</a>      </div>
+      <div class="col-md-10 col-sm-10">
+        <p class="pull-right">Dashboard version: v1.32.0</p>
+      </div>
+    </div>
+  </div><!-- /.container -->
+</footer></body></html>
