Changed UAB OnDemand header and removed static folder

--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -31,14 +31,16 @@
 </style>
 
 </head>
-<body data-gr-c-s-loaded="true"><nav class="navbar navbar-inverse navbar-static-top">
+<body data-gr-c-s-loaded="true">
+<header>
+<nav class="navbar navbar-inverse navbar-static-top">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
 
       </div><div class="container-fluid">
 
       <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-9" style="">
-        <a class="navbar-brand" href="/pun/sys/dashboard/">UAB OnDemand <sup>beta</sup></a><div class="navbar-right">
+        <a class="navbar-brand" href="/pun/sys/dashboard/">UAB Research Computing </a><div class="navbar-right">
           <ul class="nav navbar-nav" style="float: right;">
 
             <li class="dropdown" title="Help">
@@ -78,6 +80,7 @@
       </ul></div>
     </div>
   </nav>
+</header>
 
 <div class="container content" role="main" style="
     width: 800;
