--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -45,7 +45,7 @@
     <div class="col-md-12">
         <img class="header-logo" height="100" style="margin-bottom: 20px" <img="" src="/static/img/cheaha-logo-a605de0aecd3006b82a5ee30a6d0cb8cd9bf8b7e836296cc293eac746a4c2b11.png">
     <h1>Welcome</h1>
-    <h2>Hello user</h2>
+    <h2>Hello, {{ user }}!</h2>
 
     <form action="/" method="post">
       <div class="signUpContainer">
