fixed redirect loop

--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -1,7 +1,7 @@
 <html class="gr__rc_uab_edu"><head>
 <title>User Register</title>
 <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">
-<link rel="stylesheet" media="all" href="/static/style/application.css">
+<link rel="stylesheet" media="all" href="/register/static/style/application.css">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -43,25 +43,13 @@
 ">
 
     <div class="col-md-12">
-        <img class="header-logo" height="100" style="margin-bottom: 20px" <img="" src="/static/img/cheaha-logo-a605de0aecd3006b82a5ee30a6d0cb8cd9bf8b7e836296cc293eac746a4c2b11.png">
-    <h1>Welcome</h1>
-    <h2>Hello user</h2>
+        <img class="header-logo" height="100" style="margin-bottom: 20px" src="/register/static/img/cheaha-logo-a605de0aecd3006b82a5ee30a6d0cb8cd9bf8b7e836296cc293eac746a4c2b11.png">
+    <h2>Hello, {{ user }}!</h2>
 
-    <form action="/" method="post">
+    <form action="." method="post">
       <div class="signUpContainer">
           <label for="name"><b>Full Name:<br></b></label>
           <input class="form-control" type="text" placeholder="Enter Full Name" name="name">
-
-          <label for="email"><b>Email:<br></b></label>
-          <input class="form-control" type="text" placeholder="Enter Email Address" name="email">
-
-          <label for="institution"><b>Institution:<br></b></label>
-          <input class="form-control" type="text" placeholder="Enter Institution" name="institution">
-
-          <label for="sponsor"><b>Sponsor or Affiliation:<br></b></label>
-          <input class="form-control" type="text" placeholder="Enter Sponsor or Affiliation" name="sponsor">
-
-          <input class="btn btn-primary btn-block" type="submit" value="submit" onclick="return empty()">
       </div>
     </form>
     </div>
@@ -73,7 +61,7 @@
     <div class="row">
       <div class="col-md-6 col-sm-6">
 	    <a href="https://osc.github.io/Open-OnDemand/">
-	      <img class="footer-logo" alt="Powered by Open OnDemand" height="40" style="margin-bottom: 20px" src="/static/img/OpenOnDemand_powered_by_RGB-cb3aad5ff5350c7994f250fb334ddcc72e343233ce99eb71fda93beddd76a847.svg">
+	      <img class="footer-logo" alt="Powered by Open OnDemand" height="40" style="margin-bottom: 20px" src="/register/static/img/OpenOnDemand_powered_by_RGB-cb3aad5ff5350c7994f250fb334ddcc72e343233ce99eb71fda93beddd76a847.svg">
         </a>
       </div>
     </div>
