(fix) Prevent app from routing back to index

--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -50,6 +50,7 @@
       <div class="signUpContainer">
           <label for="name"><b>Full Name:<br></b></label>
           <input class="form-control" type="text" placeholder="Enter Full Name" name="name">
+          <input class="btn btn-primary btn-block" type="submit" value="submit" onclick="return empty()">
       </div>
     </form>
     </div>
