--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -1,6 +1,11 @@
-<html class="gr__rc_uab_edu"><head>
-<title>User Register</title>
-<link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">
+{% extends "auth/base.html" %}
+{% block title %} User Register {% endblock %}
+{% block head %}
+  {{ super() }}
+  <style type="text/css">
+    .important { color: #336699; }
+  </style>
+    <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">
 <link rel="stylesheet" media="all" href="/register/static/style/application.css">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,8 +15,10 @@
 }
 
 </style>
+{% endblock %}
+{% block content %}
 
-</head>
+
 <body data-gr-c-s-loaded="true">
 <header>
   <nav class="navbar navbar-inverse navbar-static-top">
@@ -70,7 +77,4 @@
   </div><!-- /.container -->
 </footer>
 
-
-
-
-</body></html>
+{% endblock %}
