Feat check account existence

--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -38,6 +38,7 @@
   </nav>
 </header>
 
+
 <div class="container content" role="main" style="
     width: 800;
 ">
@@ -50,13 +51,24 @@
     <form action="." method="post">
       <div class="signUpContainer">
           <label for="name"><b>Full Name:<br></b></label>
-          <input class="form-control" type="text" placeholder="Enter Full Name" name="name">
+          <input class="form-control" type="text" placeholder="Enter Full Name" name="name" required>
           <input class="btn btn-primary btn-block" type="submit" value="submit">
+
+          {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            {% for message in messages %}
+            <div>
+                <strong style="color: #be051b; text-align: center;">{{ message }}</strong>
+            </div>
+      {% endfor %}
+   {% endif %}
+{% endwith %}
+
       </div>
     </form>
     </div>
     </div>
-
+</body>
 
 <footer>
   <div class="container-fluid">
@@ -69,8 +81,4 @@
     </div>
   </div><!-- /.container -->
 </footer>
-
-
-
-
-</body></html>
+</html>
