--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -22,7 +22,7 @@
 
 <body data-gr-c-s-loaded="true">
 <header>
-    {% block navi %}
+    {% block body %}
   <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -46,8 +46,6 @@
     </div>
   </nav>
 </header>
-{% endblock %}
-{% block content %}
 <div class="container content" role="main" style="
     width: 800;
 ">
@@ -78,6 +76,7 @@
     </div>
     </div>
 {% endblock %}
+</body>
 {% block footer %}
   <div class="container-fluid">
     <div class="row">
@@ -90,5 +89,4 @@
   </div><!-- /.container -->
 
 {% endblock %}
-</body>
 </html>
