Add redir arg and use jinja for text header

--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -57,7 +57,7 @@
 
     <form action="." method="post">
       <div class="signUpContainer">
-          <label for="name"><b>Full Name:<br></b></label>
+          <label><b>{{ form.fullname.label }}<br></b></label>
           <input class="form-control" type="text" placeholder="Enter Full Name" name="name" required>
           <input class="btn btn-primary btn-block" type="submit" value="submit">
 
