Fix default title error

--- a/app/templates/auth/base.html
+++ b/app/templates/auth/base.html
@@ -3,7 +3,7 @@
   <head>
     {% block head %}
     <link rel="stylesheet" href="/register/static/style/application.css">
-    <title>{% block title %}{% endblock %} - My Webpage</title>
+    <title>{% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
   <body>
