--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -1,6 +1,6 @@
 {% extends "auth/base.html" %}
 <html class="gr__rc_uab_edu">
-{% block title %} User Register {% endblock %}
+{% block title %} User Registration {% endblock %}
 {% block head %}
   {{ super() }}
   <style type="text/css">
