--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -59,7 +59,7 @@
 
     <form action="." method="post">
       <div class="signUpContainer">
-
+          <label><b>{{ form.fullname.label }}<br></b></label>
           {{ form.fullname(class_="form-control", placeholder="Enter Full Name") }}
           {{ form.submit(class_="btn btn-primary btn-block") }}
 
