replace next and escape button with loading.gif

--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -92,7 +92,12 @@
         <li>
           <b>Submit</b> the job and monitor the progress from the "Job Composer" index page.
         </li>
-      </ol><a href="#" class="joyride-next-tip">Next</a><a href="#close" class="joyride-close-tip">X</a></div></div>
+      </ol>
+<!--                <a href="#" class="joyride-next-tip">Next</a>-->
+<!--                <a href="#close" class="joyride-close-tip">X</a>-->
+                <img src="/register/static/img/loading.gif" style="width: 35px; height: auto">
+            </div>
+            </div>
     <div class="joyride-modal-bg" style="display: block;"></div>
 {% endif %}
 {% endblock %}
