--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -81,7 +81,7 @@
 {% if loading %}
             <div class="joyride-tip-guide" data-index="0" style="visibility: visible; display: block; top: 77.5px; left: 570px;"><span class="joyride-nub" style="display: none;"></span><div class="joyride-content-wrapper" role="dialog"><ol>
         <h4>
-          Steps to create a job:
+          Processing User Registration:
         </h4>
         <li>
           <b>Create</b> a new job by copying from an existing job template directory or a previously run job directory.
@@ -93,11 +93,9 @@
           <b>Submit</b> the job and monitor the progress from the "Job Composer" index page.
         </li>
       </ol>
-<!--                <a href="#" class="joyride-next-tip">Next</a>-->
-<!--                <a href="#close" class="joyride-close-tip">X</a>-->
-                <img src="/register/static/img/loading.gif" style="width: 35px; height: auto">
-            </div>
-            </div>
+                <img class="col-sm-3 col-sm-offset-4" src="{{ url_for('static',
+  filename='img/loading.gif') }}" ng-show="loading">
+            </div></div>
     <div class="joyride-modal-bg" style="display: block;"></div>
 {% endif %}
 {% endblock %}
