Reverted two commits and removed comments

--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -88,19 +88,9 @@
                 <br><p>
                     This can take between 5-10 min.
                 </p>
-<!--        <li>-->
-<!--          <b>Create</b> a new job by copying from an existing job template directory or a previously run job directory.-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <b>Edit</b> the files in the job via the file explorer.-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <b>Submit</b> the job and monitor the progress from the "Job Composer" index page.-->
-<!--        </li>-->
       </ol>
 
-                <img class="col-sm-3 col-sm-offset-4" src="{{ url_for('static',
-  filename='img/loading.gif') }}" ng-show="pending"> Pending
+                <img src="/register/static/img/loading.gif" style="width: 35px; height: auto"> Pending...
             </div></div>
 
     <div class="joyride-modal-bg" style="display: block;"></div>
