--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -3,6 +3,7 @@
 {% block title %} User Registration {% endblock %}
 {% block head %}
   {{ super() }}
+<script src="/var/www/ood/register/flask_user_reg/app/static/scripts/function.js"></script>
 <script src="/register/static/scripts/application.js"></script>
   <style type="text/css">
     .important { color: #336699; }
@@ -58,28 +59,6 @@
 </div>
 
     <h2>Hello, {{ user }}!</h2>
-
-    <script>
-        function displayloading() {
-            document.getElementById("notification_window").innerHTML = "" +
-                "<div class=\"joyride-tip-guide\" data-index=\"0\" style=\"visibility: visible; display: block; top: 77.5px; left: 570px;\"><span class=\"joyride-nub\" style=\"display: none;\"></span><div class=\"joyride-content-wrapper\" role=\"dialog\"><ol>\n" +
-                "        <h4>\n" +
-                "\n" +
-                "          Your account is pending creation...\n" +
-                "\n" +
-                "        </h4>\n" +
-                "                <br><p>\n" +
-                "                    This can take between 5-10 min.\n" +
-                "                </p>\n" +
-                "      </ol>\n" +
-                "                <img src=\"/register/static/img/loading.gif\" style=\"width: 35px; height: auto\"> Pending...\n" +
-                "            </div></div>\n" +
-                "\n" +
-                "    <div class=\"joyride-modal-bg\" style=\"display: block;\"></div>"
-
-
-        }
-    </script>
 
     <form action="." method="post" onsubmit="displayloading()">
       <div class="signUpContainer">
