--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -3,7 +3,7 @@
 {% block title %} User Registration {% endblock %}
 {% block head %}
   {{ super() }}
-<script src="{{ url_for('static', filename='scripts/function.js') }}"></script
+<script src="{{ url_for('static', filename='scripts/function.js') }}"></script>
 <script src="/register/static/scripts/application.js"></script>
   <style type="text/css">
     .important { color: #336699; }
