script src path fix

--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -4,7 +4,7 @@
 {% block head %}
   {{ super() }}
 <script src="{{ url_for('static', filename='scripts/function.js') }}"></script>
-<script src="/register/static/scripts/application.js"></script>
+<script src="{{ url_for('static', filename='scripts/application.js') }}"></script>
   <style type="text/css">
     .important { color: #336699; }
   </style>
