fix merge conflict

--- a/app/templates/errors/registration_failed.html
+++ b/app/templates/errors/registration_failed.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <h2>Something went wrong...</h2>
+    <h2>Something went right...</h2>
     <p>
        Redirecting back to sign-in page in 5 seconds.
     </p>
