--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -78,6 +78,24 @@
    {% endif %}
 {% endwith %}
 
+          <script>
+              socket.on( 'connect', function() {
+                  socket.emit( 'my event', {
+                      data: 'User Connected'
+                  } )
+                  var form = $( 'form' ).on( 'submit', function( e ) {
+                      e.preventDefault()
+                      let user_name = $( 'input.username' ).val()
+                      let user_input = $( 'input.message' ).val()
+                      socket.emit( 'my event', {
+                          user_name : user_name,
+                          message : user_input
+                      } )
+                      $( 'input.message' ).val( '' ).focus()
+                  } )
+              } )
+          </script>
+
       </div>
     </form>
     </div>
