--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -9,8 +9,8 @@
     .important { color: #336699; }
   </style>
     <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">
-<link rel="stylesheet" media="all" href="/register/static/style/application.css">
-<link rel="stylesheet" media="all" href="/register/static/style/app2.css">
+<link rel="stylesheet" media="all" href="/static/style/application.css">
+<link rel="stylesheet" media="all" href="/static/style/app2.css">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -30,7 +30,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
 	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-	<a class="navbar-brand" href="/register">Research Computing</a>
+	<a class="navbar-brand" href="/">Research Computing</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
 	<ul class="nav navbar-nav">
@@ -52,7 +52,7 @@
 <div class="container content" role="main" style="width: 625px">
 
     <div style="position:relative;">
-  <img alt="logo" height="100" style="margin-bottom: 20px" src="/register/static/img/cheaha-logo-a605de0aecd3006b82a5ee30a6d0cb8cd9bf8b7e836296cc293eac746a4c2b11.png">
+  <img alt="logo" height="100" style="margin-bottom: 20px" src="/static/img/cheaha-logo-a605de0aecd3006b82a5ee30a6d0cb8cd9bf8b7e836296cc293eac746a4c2b11.png">
   <a href="https://tinyurl.com/cheahaAL" target="_blank">
     <div style="float:left;position:absolute;display:block;left:310px;top:-6px;padding:10px 20px;"> </div>
   </a>
@@ -91,7 +91,7 @@
     <div class="row">
       <div class="col-md-6 col-sm-6">
 	    <a href="https://osc.github.io/Open-OnDemand/">
-	      <img class="footer-logo" alt="Powered by Open OnDemand" height="40" style="margin-bottom: 20px" src="/register/static/img/OpenOnDemand_powered_by_RGB-cb3aad5ff5350c7994f250fb334ddcc72e343233ce99eb71fda93beddd76a847.svg">
+	      <img class="footer-logo" alt="Powered by Open OnDemand" height="40" style="margin-bottom: 20px" src="/static/img/OpenOnDemand_powered_by_RGB-cb3aad5ff5350c7994f250fb334ddcc72e343233ce99eb71fda93beddd76a847.svg">
         </a>
       </div>
     </div>
