--- a/app/templates/auth/SignUp.html
+++ b/app/templates/auth/SignUp.html
@@ -14,12 +14,8 @@
           data: 'User Connected'
         } )
 
-       socket.on( 'my response', function( msg ) {
-        console.log( msg )
-        if( typeof msg.user_name !== 'undefined' ) {
-          $( 'h3' ).remove()
-          $( 'div.message_holder' ).append( '<div><b style="color: #002">'+msg.user_name+'</b> creating</div>' )
-        }
+       socket.on( 'creating account', function( msg ) {
+        document.getElementById("test").innerHTML = "Account is being Created!";
       })
 
 
@@ -87,14 +83,14 @@
 </div>
 
     <h2>Hello, {{ user }}!</h2>
-
+    <div id="test">
     <form action="." method="post" onsubmit="">
       <div class="signUpContainer">
           <label><b><label for="fullname">Full Name: </label><br></b></label>
             <input class="form-control" id="fullname" name="fullname" placeholder="Enter Full Name" required="" type="text">
           <label><b><label for="reason">Reason for Requesting Account: </label><br></b></label>
             <textarea class="form-control" id="reason" name="reason" placeholder="Enter Reason for Account Request" required=""></textarea>
-          <input class="btn btn-primary btn-block" id="submit" name="submit" type="button" value="Submit" onclick="displayloading(); socketIO()">
+          <input class="btn btn-primary btn-block" id="submit" name="submit" type="button" value="Submit" onclick="socketIO()">
 
           {% with messages = get_flashed_messages() %}
             {% if messages %}
@@ -108,6 +104,7 @@
 
       </div>
     </form>
+    </div>
     </div>
 
 
